fixed spacing

--- a/front-end/app/src/Components/DriverForm/NewDriver.css
+++ b/front-end/app/src/Components/DriverForm/NewDriver.css
@@ -1,7 +1,7 @@
 .new-driver {
   background-color: #c0c0c000;
   padding: 1rem;
-  margin: 3rem auto;
+  margin: 1.5rem auto;
   width: 65rem;
   max-width: 95%;
   border-radius: 12px;
